Correct the unshift issue

--- a/src/sass/components/chat.scss
+++ b/src/sass/components/chat.scss
@@ -11,7 +11,7 @@
 
 .chat-header {
     width: 100%;
-    height: 50px;
+    height: 52px;
 }
 
 .chat-box-open {
