--- a/src/sass/pages/dashboard.scss
+++ b/src/sass/pages/dashboard.scss
@@ -88,6 +88,7 @@
 }
 
 h1.channel-header {
+    margin-bottom: 2px;
     font-size: $header;
     font-weight: $superHeavy;
     text-align: left;
